# stock

./: .env.example  .gitignore  DEV_NOTES.md  README.md  SETUP.md  docker-compose.yml  railway.toml  start.sh  stop.sh
backend/: Dockerfile  init.sql  pyproject.toml  requirements.txt  vercel.json
backend/app/: __init__.py  main.py
backend/app/api/v1/: __init__.py  router.py
backend/app/api/v1/endpoints/: __init__.py  health.py  historical.py  insights.py  predict.py  sentiment.py  websocket.py
backend/app/core/: __init__.py  config.py  database.py  logging.py
backend/app/models/db/: __init__.py  schemas.py
backend/app/models/ml/: __init__.py  bilstm_attention.py  cnn_lstm.py  ensemble.py  xgboost_model.py
backend/app/schemas/: __init__.py  request_response.py
backend/app/services/: __init__.py  background_tasks.py  data_service.py  prediction_service.py  preprocessing_service.py  sentiment_service.py  technical_indicators.py  training_service.py  vmd_service.py
backend/tests/: conftest.py  test_config.py  test_data_service.py  test_integration.py  test_preprocessing_service.py
frontend/: Dockerfile  PROGRESS.md  next.config.js  package-lock.json  package.json  tailwind.config.ts
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/components/charts/: PriceChart.tsx  Sparkline.tsx
frontend/src/components/dashboard/: AIInsights.tsx  EconomicCalendar.tsx  ExportButton.tsx  Glossary.tsx  KeyLevels.tsx  MetricCard.tsx  MultiHorizonPredictions.tsx  NewsHeadlines.tsx  NextEvent.tsx  OpportunityMeter.tsx  PriceAlert.tsx  QuickStats.tsx  SentimentGauge.tsx  TechnicalSummary.tsx  ThemeToggle.tsx  VolatilityBadge.tsx  Watchlist.tsx
frontend/src/hooks/: useLivePrice.ts
